--- a/src/pages/Error/ErrorPage.module.css
+++ b/src/pages/Error/ErrorPage.module.css
@@ -21,9 +21,12 @@
   }
   
   .flowerImg {
-    width: 50px;
-    height: 50px;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 400px;
   }
+  
   
   .message {
     font-size: 18px;
