--- a/src/pages/Error/ErrorPage.module.css
+++ b/src/pages/Error/ErrorPage.module.css
@@ -1,3 +1,9 @@
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+
+
+body  {
+  font-family: 'Spoqa Han Sans Neo', 'sans-serif';
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -24,7 +30,7 @@
     width: auto;
     height: auto;
     max-width: 100%;
-    max-height: 400px;
+    max-height: 200px;
   }
   
   
@@ -32,12 +38,12 @@
     font-size: 18px;
     font-weight: 400;
     margin-top: 20px;
-    color: #282828;
+    color: #8D8D8D;
   }
   
   .subMessage {
     font-size: 14px;
     color: #B8B8B8;
-    margin-top: 10px;
+    margin-top: 18px;
   }
   
