--- a/src/Post/MakePost.css
+++ b/src/Post/MakePost.css
@@ -10,6 +10,20 @@
   text-align: center;
 }
 
+/* 상단 헤더 스타일 */
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+/* 로고 아이콘 스타일 */
+.header .logo {
+  width: 150px;
+  margin-bottom: 20px;
+}
+
 form {
   display: flex;
   flex-wrap: wrap;
