--- a/src/pages/post/PostPage.module.css
+++ b/src/pages/post/PostPage.module.css
@@ -92,6 +92,7 @@
   }
   
   .commentTextarea {
+    resize: none;
     width: 95%;
     height: 60px;
     padding: 10px;
@@ -156,6 +157,7 @@
   
   /* Editing Comment */
   .editingTextarea {
+    resize: none;
     width: 95%;
     height: 50px;
     padding: 10px;
@@ -229,7 +231,7 @@
   /* 게시글 수정 버튼 */
   .editButton {
     position: absolute;
-    top: -60px;  /* 위치를 맞추기 위해 같은 높이로 설정 */
+    top: -35px;  /* 위치를 맞추기 위해 같은 높이로 설정 */
     right: 110px;  /* 삭제하기 버튼 옆에 위치 */
     padding: 10px 20px;
     background-color: #fafafa;
@@ -247,7 +249,7 @@
   .deletePostButton {
     margin-bottom: 10px;
     position: absolute;
-    top: -60px;  /* 위치를 맞추기 위해 같은 높이로 설정 */
+    top: -35px;  /* 위치를 맞추기 위해 같은 높이로 설정 */
     right: 10px;  /* 오른쪽 여백 */
     padding: 10px 20px;
     background-color: #fafafa;
