--- a/src/pages/group/GroupList.module.css
+++ b/src/pages/group/GroupList.module.css
@@ -29,7 +29,7 @@
   color: inherit; /* 기본 글자색 유지 */
 }
 
-GroupListItem {
+.GroupListItem {
   background: white;
   border-radius: 12px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -40,23 +40,23 @@ GroupListItem {
   height: 300px
 }
 
-GroupListItem:hover {
+.GroupListItem:hover {
   transform: scale(1.05);
 }
 
-GroupListItem img {
+.GroupListItem img {
   width: 100%;
   height: 180px; /* 고정 높이 */
   object-fit: cover;
   border-radius: 8px;
 }
 
-GroupListItem h1 {
+.GroupListItem h1 {
   font-size: 18px;
   margin: 10px 0;
 }
 
-GroupListItem p {
+.GroupListItem p {
   font-size: 14px;
   color: #666;
 }
