--- a/src/pages/group/EditGroup.css
+++ b/src/pages/group/EditGroup.css
@@ -1,4 +1,3 @@
-
 /* 전체 페이지 스타일 */
 .create-group-page {
   width: 100%;
@@ -13,13 +12,14 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-top: 40px; /* 로고 위쪽 여백 추가 */
 }
 
 /* 로고 아이콘 스타일 */
 .header .logo {
   width: 150px;
-  margin: 0 auto 40px; /* 좌우 여백 자동, 아래 여백 20px */
-  display: block; /* 블록 요소로 변환 */
+  margin: 0 auto 40px;
+  display: block;
 }
 
 /* 폼 스타일 */
@@ -97,46 +97,45 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-
-
+/* 버튼 그룹 스타일 */
 .button-group {
   margin-top: 30px;
   display: flex;
-  justify-content: center;
+  justify-content: center; /* 버튼들이 수평으로 중앙 정렬 */
+  gap: 10px; /* 버튼 간 간격을 10px로 조정 */
 }
 
 .button-group button {
-  width: 200px;
-  height: 45px;
+  width: 210px; /* 가로 길이를 10px 늘림 */
+  height: 40px; /* 높이를 5px 줄임 */
   font-family: 'Spoqa Han Sans Neo';
   font-size: 16px;
   font-weight: 500;
   border-radius: 6px;
-  margin: 0 10px; /* 버튼 간의 여백 추가 */
-  cursor: pointer; /* 클릭 커서 */
-  transition: background-color 0.3s ease; /* 배경색 변화 시 부드러운 전환 */
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 /* 수정 버튼 */
 .button-group .submit-btn {
-  background-color: #FAFAFA;        /* 수정 버튼 배경색 */
-  color: #282828;                    /* 수정 버튼 글자색 */
-  border: 1px solid #282828;         /* 수정 버튼 테두리 */
+  background-color: #FAFAFA;
+  color: #282828;
+  border: 1px solid #282828;
 }
 
 .button-group .submit-btn:hover {
-  background-color: #444;           /* 수정 버튼 호버 시 배경색 변경 */
-  color: #FAFAFA;                    /* 호버 상태에서 글자색은 그대로 */
+  background-color: #444;
+  color: #FAFAFA;
 }
 
 /* 삭제 버튼 */
 .button-group .delete-btn {
-  background-color: #FAFAFA;        /* 삭제 버튼 배경색 */
-  color: #282828;                    /* 삭제 버튼 글자색 */
-  border: 1px solid #282828;         /* 삭제 버튼 테두리 */
+  background-color: #FAFAFA;
+  color: #282828;
+  border: 1px solid #282828;
 }
 
 .button-group .delete-btn:hover {
-  background-color: #444;           /* 삭제 버튼 호버 시 배경색 변경 */
-  color: #FAFAFA;                    /* 호버 상태에서 글자색은 그대로 */
+  background-color: #444;
+  color: #FAFAFA;
 }
