--- a/src/pages/post/EditPost.css
+++ b/src/pages/post/EditPost.css
@@ -1,7 +1,7 @@
 /* 기본 스타일 */
 .create-post-container {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 112px auto;
     padding: 40px;
     transform: scale(0.85); /* 화면 전체 크기 축소 */
   }
