--- a/src/pages/post/MakePost.css
+++ b/src/pages/post/MakePost.css
@@ -1,6 +1,6 @@
 .create-post-container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 112px auto;
   padding: 40px;
   transform: scale(0.85); /* 화면 전체 크기 축소 */
 }
