--- a/src/pages/admin/LoginPage.module.css
+++ b/src/pages/admin/LoginPage.module.css
@@ -70,12 +70,12 @@ label {
 }
 
 .loginButton {
-  background-color: #007bff;
+  background-color: #6A6765;
   color: white;
 }
 
 .loginButton:hover {
-  background-color: #0056b3;
+  background-color: #282828;
 }
 
 .signupButton {
