--- a/src/pages/group/GroupDetail.css
+++ b/src/pages/group/GroupDetail.css
@@ -1,9 +1,10 @@
 /* 전체 컨테이너 */
 .group-detail-container {
   width: 100%;
-  margin: 112px auto;
-  padding: 20px;
-  max-width: 1180px;
+  margin: 60px auto;
+  padding: 15px;
+  max-width: 980px;
+  transform: scale(0.85);
 }
 
 /* 헤더 섹션 */
@@ -11,14 +12,14 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   border-bottom: 1px solid #dddddd;
 }
 
 .group-img {
-  width: 262px;
-  height: 273px;
-  border-radius: 10px;
+  width: 215px;
+  height: 230px;
+  border-radius: 8px;
   object-fit: cover;
 }
 
@@ -37,17 +38,16 @@
 }
 
 .group-detail-title {
-  font-size: 30px;
+  font-size: 26px;
   font-weight: bold;
   color: #282828;
-  margin-right: 40px;
-  text-align: left;
+  margin-right: 30px;
 }
 
 .group-stats-inline {
-  font-size: 18px;
+  font-size: 16px;
   display: flex;
-  gap: 30px;
+  gap: 20px;
   color: #666;
   font-weight: bold;
 }
@@ -80,8 +80,8 @@
 
 /* 그룹 설명 */
 .group-description {
-  font-size: 18px;
-  line-height: 10px;
+  font-size: 16px;
+  line-height: 2px;
   display: inline-block;
   margin-bottom: 20px;
   color: #333;
@@ -91,7 +91,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .group-badges {
@@ -113,9 +113,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  min-width: 120px;
-  max-width: 250px;
-  height: 30px;
+  min-width: 100px;
+  max-width: 200px;
+  height: 25px;
   padding: 10px;
   border-radius: 55px;
   background-color: #f0f0f0;
@@ -128,12 +128,12 @@
 
 .badge.acquired {
   opacity: 1;
-  background-color: #FDF3EA;
+  background-color: #fdf3ea;
 }
 
 .badge.not-acquired {
   opacity: 0.4;
-  background-color: #FDF1E7;
+  background-color: #fdf1e7;
 }
 
 .badge-icon {
@@ -142,32 +142,35 @@
 }
 
 .badge-name {
-  font-size: 13px;
+  font-size: 12px;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   flex: 1;
-  margin-right: 10px;
+  margin-right: 5px;
+  padding-top: 2px;
 }
 
 .follow-btn {
-  background-color: transparent;
+  background-color: #fafafa;
   color: #282828;
-  font-size: 16px;
-  padding: 10px 20px;
-  border: 2px solid #282828;
+  font-size: 10px;
+  padding: 8px 16px;
+  border: 1px solid #282828;
   border-radius: 5px;
   cursor: pointer;
-  min-width: 150px;
+  min-width: 130px;
   display: flex;
   align-items: center;
   gap: 10px;
   align-self: flex-end;
+  margin-bottom: 3px;
 }
 
 .follow-btn:hover {
-  background-color: #f4f4f4;
+  background-color: #444;
+  color: #fafafa;
 }
 
 .follow-btn img {
@@ -176,13 +179,12 @@
 }
 
 .group-badge-section {
-  margin-top: 30px;
+  margin-top: 20px;
 }
-
 .badge-title {
-  font-size: 18px;
+  font-size: 5px;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 7px;
 }
 
 .badges-container {
@@ -194,30 +196,9 @@
   display: none;
 }
 
-.badge-scroll-btn {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.8);
-  border: none;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 1;
-}
-
-.badge-scroll-btn.right {
-  right: 0;
-}
-
 /* 추억 목록 섹션 */
 .post-section {
-  margin-top: 60px;
+  margin-top: 0px;
 }
 
 .post-header {
@@ -225,8 +206,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 100px;
-  margin-bottom: 70px;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .post-header h3 {
@@ -235,21 +216,20 @@
 }
 
 .post-upload-btn {
-  background-color: #282828;
+  background-color: #6a6765;
   color: white;
   font-size: 16px;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  width: 200px;
-  height: 45px;
-  position: absolute;
+  width: 160px;
+  height: 40px;
   right: 0;
 }
 
 .post-upload-btn:hover {
-  background-color: #444;
+  background-color: #282828;
 }
 
 /* 필터, 정렬 옵션 */
@@ -273,7 +253,7 @@
 
 .public-btn.active,
 .private-btn.active {
-  background-color: #282828;
+  background-color: #6a6765;
   color: #fafafa;
 }
 
@@ -281,6 +261,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .post-sort-select {
@@ -288,22 +269,23 @@
   padding: 10px;
   font-size: 14px;
   border-radius: 5px;
+  margin-left: auto;
 }
 
 /* 추억 카드 레이아웃 */
 
 .post-list {
-  margin-top: 60px;
+  margin-top: 40px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
 }
 
 .post-card {
-  width: 340px;
+  width: 280px;
   border: 1px solid #dddddd;
-  border-radius: 12px;
-  padding: 15px;
+  border-radius: 10px;
+  padding: 12px;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -316,8 +298,8 @@
 }
 
 .post-img {
-  width: 335px;
-  height: 335px;
+  width: 280px;
+  height: 280px;
   object-fit: cover;
   border-radius: 6px;
 }
@@ -386,18 +368,12 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/*
-.post-tags {
-  color: #999;
-  font-size: 14px;
-  margin-bottom: 20px;
-}*/
 
 .post-footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   color: #8d8d8d;
 }
 
@@ -408,7 +384,7 @@
 
 .post-stats {
   display: flex;
-  gap: 20px;
+  gap: 10px;
 }
 
 .flower-chat-icon {
