--- a/src/pages/group/MakeGroup.css
+++ b/src/pages/group/MakeGroup.css
@@ -10,7 +10,6 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
 /* 상단 헤더 스타일 */
 .header {
   display: flex;
@@ -19,56 +18,80 @@
   text-align: center;
 }
 
-
 /* 폼 스타일 */
 .create-group-form {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  padding-left: 15px; /* 좌측 여백 */
-  padding-right: 15px ;
+  align-items: center;
+  width: 100%;
 }
 
+/* 레이블 스타일 */
 .create-group-form label {
+  width: 100%;
   margin-bottom: 10px;
   font-weight: bold;
   text-align: left;
 }
 
+/* 입력 필드 스타일 */
 .create-group-form input,
 .create-group-form textarea {
-  margin-bottom: 20px;
-  padding: 15px;
+  width: 100%;
+  max-width: 290px;
+  padding: 12px;
+  margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  width: 290px;
+  font-size: 14px;
+}
+
+/* 파일 업로드 스타일 */
+.create-group-form input[type="file"] {
+  border: none;
+  padding: 5px;
 }
 
 /* 버튼 그룹 스타일 */
-.button-group {
-  margin-top: 30px;
+/* .button-group {
   display: flex;
-  justify-content: center; /* 버튼들이 수평으로 중앙 정렬 */
-}
+  justify-content: center;
+  width: 100%;
+  margin-top: 20px;
+} */
 
+/* 버튼 스타일
 .button-group button {
-  width: 100%; 
-  height: 40px; 
-  font-family: 'Spoqa Han Sans Neo';
+  width: 100%;
+  max-width: 290px;
+  height: 40px;
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
   font-size: 16px;
   font-weight: 500;
   border-radius: 6px;
+  border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
+} */
 
-.button-group .submit-btn {
+/* 제출 버튼 */
+.submit-btn {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  max-width: 290px;
+  height: 40px;
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
   background-color: #6A6765;
   color: white;
-  border: none;
 }
 
-.button-group .submit-btn:hover {
+.submit-btn:hover {
   background-color: #282828;
 }
-
